# voice-mimic

./: .gitignore  LICENSE  README.md  README.zh-TW.md  app.py  pyproject.toml  requirements.txt  uv.toml
.github/workflows/: sync-to-hf.yml
artifacts/calibration_profiles/: 2026-04-20-demo-session.json
artifacts/roundtrip_runs/2026-04-20-demo-session/: session-report.json
artifacts/roundtrip_runs/2026-04-20-demo-session/captures/: round-01-capture.txt  round-02-capture.txt
artifacts/roundtrip_runs/2026-04-20-demo-session/outputs/: round-01-tts.txt  round-02-tts.txt
artifacts/voice_prompts/demo_speaker_01/: demo-prompt-pack.json  demo-prompt-pack.pt  demo_speaker_01-zh-31c30a85e886.json  demo_speaker_01-zh-698dd3e1b9ef.json  demo_speaker_01-zh-7c3b968e0d38.json  demo_speaker_01-zh-9270a807675b.json  demo_speaker_01-zh-9613c493f3cc.json  demo_speaker_01-zh-a5e6f59a359f.json
configs/: authorized_speakers.example.yaml  session_calibration.example.yaml
docs/: bootstrap-plan.md  progress-report.md  roundtrip-experiment-spec.md  voice-preservation-research.md
notebooks/: voice-mimic-colab.ipynb
scripts/: sync_space.ps1
src/: app.py
src/qwen3_voice_preservation/: __init__.py  assets.py  assets_cli.py  audio.py  audio_cli.py  calibration.py  calibration_cli.py  cli.py  config.py  controller.py  controller_backends.py  models.py  prompts.py  prompts_cli.py
tests/: test_assets.py  test_calibration.py  test_controller.py  test_prompts.py
upstream/Qwen3-TTS/: app.py  requirements.txt
upstream/Qwen3-TTS/notebooks/: qwen3_tts_voice_mimic_colab.ipynb
(+4 files in other folders)
